# permanent-colandr-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  TODO.md  celery_worker.py  compose.yml  deploy_azure.py  docker-compose-azure.yml  docker-compose-deploy.yml  docker-compose-in-azure.yml  docker-compose.yml  gunicorn.conf.py  gunicorn_config.py  gunicorn_runserver.py  macos-setup.sh  make_celery.py  manage.py  pyproject.toml  repopulate_db.py  requirements.txt  reset_db.py  restart_service.sh  run.py  setup.cfg  workflow.md
.github/workflows/: checks.yml  heroku.yml
HTML_files/: citation_screening.html  index.html  my_reviews.html
HTML_files/css/: style.css
HTML_files/templating/: run.py
api/: api.py  citation.py  user.py
ciapi/: __init__.py  app.py  auth.py  config.py  migrate.py  models.py  reset_db.py  schemas.py
ciapi/hug_api/: __init__.py  app.py  auth.py  citation.py  citations.py  user.py
ciapi/resources/: citations.py  reviewplans.py  reviews.py  users.py
cipy/: __init__.py  exceptions.py  hack.py  hacks.py  present_data.py  utils.py
cipy/api/: __init__.py  auth.py  citation.py  citations.py  root.py  user.py
cipy/db/: __init__.py  citation.py  db_config.py  db_url.py  db_utils.py  ddl.py  ddl.yaml  postgres.py  queries.py  sanitizers.py  statement_templates.yaml
cipy/ddls/: citation_screening.yaml  citation_status.yaml  citations.yaml  duplicates.yaml  prescreening.yaml  projects.yaml  review_plans.yaml  review_settings.yaml  reviews.yaml  users.yaml
cipy/parsers/: __init__.py  bibtex.py  ris.py
cipy/validation/: __init__.py  citation.py  citation_status.py  project.py  review.py  review_plan.py  sanitizers.py  user.py
colandr/: __init__.py  app.py  cli.py  config.py  emails.py  errors.py  extensions.py  models.py  tasks.py
colandr/api/: __init__.py  auth.py  auth_v2.py  authentication.py  citation_screenings.py  citations.py  errors.py  fulltext_screenings.py  fulltext_uploads.py  fulltexts.py  health.py  registration.py  review_plans.py  review_progress.py  review_teams.py  reviewplans.py  reviews.py  schemas.py  screenings.py  swagger.py  users.py  utils.py
colandr/apis/: __init__.py  api_v1.py  auth.py  errors.py  health.py  schemas.py  swagger.py
colandr/lib/: constants.py  preprocessors.py  sanitizers.py  utils.py
colandr_data/citations/: known_statuses.json
colandr_data/dedupe-v2/: readme.md
deployment/: README.md  api-deployment.yaml  broker-data-persistentvolumeclaim.yaml  db-data-persistentvolumeclaim.yaml  db-deployment.yaml  email-deployment.yaml  email-service.yaml  env-configmap.yaml  setup_log.md  worker-deployment.yaml  worker-service.yaml
docs/: app-management.md  dev-env-setup-ubuntu.md  dev-env-setup.md  dev-setup.md  user-workflow.md
kubernetes/: api-cm0-configmap.yaml  api-service.yaml  broker-deployment.yaml  broker-service.yaml  db-service.yaml  log.md
migrations/: alembic.ini  env.py
migrations/versions/: 03bc1be874a0_.py  03f0535753d7_.py  0a4a6fc5fbb3_.py  0c4b878c4312_.py  10e30b838ff6_remove_dedupe_tables.py  1509a565a16a_.py  1894d2bbe5c4_.py  1994a0e9e613_.py  1c023402f9d8_extend_users_password_varchar.py  258981e39afd_make_datetime_columns_tzaware.py  2c765db19d6e_.py  2d476c030c28_.py  2ebb88a7872d_.py  31393355beb7_.py  3143eb18a369_drop_review_num_study_count_cols.py  38a7ac82fd59_.py  3e2f5a755a10_consolidate_screenings.py  5392808c47f6_.py  642f9119f981_.py  6899968b51c0_consolidate_studies_and_screenings.py  78dbca61ed59_allow_dynamic_num_study_reviewers.py  7bb8dd82d219_.py  7cb95304dbcf_.py  8189c2d935cc_.py  81c11e4864b7_consolidate_studies_and_screenings.py  8d98ed15b29e_.py  9a941c4cd94e_add_new_review_users_association_table.py  acafd03652f0_allow_longer_tags_and_labels.py  afbfc506e91a_rename_updated_dttm_columns.py  b2886c80f373_modify_foreign_keys_nullability.py  b609e3b2d629_.py  c620f8df8b1c_.py  d225d270af3f_initial_db_migration_after_reset.py  d4b5d97383f2_.py  d519392ad2b1_.py  de440d9ae8bf_.py  e019a6c7f7ab_.py  edca8f07e6fb_.py  ff8fa67b9273_stop_sharing_study_pkeys.py
models/: dedupe_citations_settings  dedupe_citations_training.json
notebooks/: api-guide.ipynb  api-tests.ipynb  citation-deduplication.ipynb  citation-processing.ipynb  db-administration.ipynb  dev-env-setup.ipynb  explore-rdata-tables-from-sam.ipynb  nlp-tests.ipynb  parse-citation-formats.ipynb  phase-2-demo.ipynb  record-matching.ipynb  scratchpad.ipynb  sqlalchemy-tests.ipynb  usage-instructions.ipynb
pdfestrian/: README.md  authors.txt  authorsUniq.txt  filematched.json  goodWords.txt  locations  pom.xml  rData_exploration.html  rData_exploration.ipynb  wasmatchmore.json
pdfestrian/config/: log4j.xml.example  pdfestrian_default.conf
pdfestrian/json/: bib.dups.json  biome.json  combinedincluded.json  data.biblio.u.csv.json  extractedData.json  extractedDataMore.json  fileunmatched.json  fulltextIds  idMap.tsv  interv.json  man_matched.json  matched.json  moreMatched.json  nomatches.json  outcome.json  outcomewb.json  pathways.json  study.json  wasmatched.json
pdfestrian/kmeans/: cluster0.txt  cluster1.txt  cluster10.txt  cluster11.txt  cluster12.txt  cluster13.txt  cluster14.txt  cluster15.txt  cluster16.txt  cluster17.txt  cluster18.txt  cluster19.txt  cluster2.txt  cluster20.txt  cluster21.txt  cluster22.txt  cluster23.txt  cluster24.txt  cluster25.txt  cluster26.txt  cluster27.txt  cluster28.txt  cluster29.txt  cluster3.txt  cluster30.txt  (+75 more)
references/: Detailed_extraction_questionnaire.xlsx  Guide to CI_SNAP data.docx
requirements/: dev.txt  prod.txt
scripts/: create_project.py  create_review.py  create_user.py  dedupe_records.py  delete_project.py  delete_review.py  delete_user.py  extractText.sh  extract_pdf_text.py  ingest_citations.py  initial_prescreen_citations.py  login_user.py  manage_collaborators.py  plan_review.py  screen_citations.py  train_deduper.py  train_deduper_v2.py
src/: bibtex.py  parser_ris.py  ris.py
tests/: conftest.py  helpers.py  test_config.py  test_db.py  test_models.py  test_routes.py
(+327 files in other folders)
