[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colandr"
version = "1.1.0.dev0"
description = "Back-end code for running the colandr app."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "alembic~=1.11.0",
  "arrow~=1.3.0",
  "bibtexparser~=1.4.0",
  "celery~=5.3.0",
  "click~=8.0",
  "dedupe~=2.0.0",
  "flask~=3.0",
  "flask-caching~=2.1.0",
  "flask-jwt-extended~=4.5.0",
  "flask_mail>=0.9.1",         # TODO: this package is dead, we should replace it
  "flask_migrate~=4.0.0",
  "flask_sqlalchemy~=3.0.0",
  "flask-restx~=1.3.0",
  "ftfy~=6.0",
  "gunicorn~=21.0",
  "jinja2~=3.0",
  "joblib~=1.0",
  "markupsafe~=2.0",
  "marshmallow~=3.19.0",
  "numpy~=1.20",
  "psycopg2-binary~=2.9.0",
  "pymupdf~=1.22.0",
  "python-dateutil~=2.8",
  "python-dotenv~=1.0.0",
  "redis~=5.0",
  "rispy~=0.8.0",
  "scikit-learn~=1.3.0",
  "sqlalchemy~=1.4",           # TODO: update this once all usage updated to future-style
  "textacy~=0.13.0",
  "webargs~=8.0",
  "werkzeug",
]

[project.optional-dependencies]
dev = [
  "httpx~=0.25.0",
  "ipython",
  # "jupyter",
  "mypy~=1.0",
  "pytest~=7.0",
  "ruff~=0.1.0",
]

[tool.setuptools.packages.find]
where = ["colandr"]

[tool.mypy]
files = ["colandr/**/*.py"]
python_version = "3.10"
pretty = true
ignore_errors = true
allow_redefinition = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]

[tool.ruff]
# ignore line-length violations, None comparisons
ignore = ["E501", "E711"]
line-length = 88
indent-width = 4
target-version = "py310"
src = ["colandr"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"] # imports not at top of cell and unused imports
